@@ -35,6 +35,7 @@ enum _DccmClientSignals
   PASSWORD_REQUIRED,
   PASSWORD_REQUIRED_ON_DEVICE,
   PASSWORD_REJECTED,
+  SERVICE_STARTING,
   SERVICE_STOPPING,
   DCCM_LAST_SIGNAL
 };
