@@ -1,3 +1,8 @@
+2008-10-30  Mark Ellis <mark@mpellis.org.uk>
+
+	* add service-starting signal for dccm clients
+	* replace info dialogs with notifications
+
 2008-10-27  Mark Ellis <mark@mpellis.org.uk>
 
 	* src/synce_app_man.c - assume cabs with processor type 0 are ok,
